--- a/answers.ipynb
+++ b/answers.ipynb
@@ -342,16 +342,14 @@
   {
    "cell_type": "markdown",
    "id": "dc4c4aa9-5a7b-46ef-9abe-4f0e6e1fbe6e",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "##### Docker running"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "7be2ebb9-e970-4883-979b-2f2a025681c8",
    "metadata": {},
    "outputs": [
@@ -360,29 +358,9 @@
      "output_type": "stream",
      "text": [
       "\u001b[1A\u001b[1B\u001b[0G\u001b[?25l[+] Running 3/0\n",
-      " \u001b[33m⠋\u001b[0m Volume \"cloudwalk_postgres_data\"                                   Created\u001b[34m0.1s \u001b[0m\n",
-      " \u001b[33m⠋\u001b[0m Container cloudwalk-db-1                                           Starting\u001b[34m0.1s \u001b[0m\n",
-      " \u001b[33m\u001b[1m!\u001b[0m db Published ports are discarded when using host network mode      \u001b[33m\u001b[1m\u001b[0m     \u001b[34m0.0s \u001b[0m\n",
-      " \u001b[33m⠋\u001b[0m Container cloudwalk-app-1                                          Created\u001b[34m0.1s \u001b[0m\n",
-      " \u001b[33m⠋\u001b[0m Container pgadmin4_container                                       Created\u001b[34m0.1s \u001b[0m\n",
-      " \u001b[33m\u001b[1m!\u001b[0m app Published ports are discarded when using host network mode     \u001b[33m\u001b[1m\u001b[0m     \u001b[34m0.0s \u001b[0m\n",
-      " \u001b[33m\u001b[1m!\u001b[0m pgadmin Published ports are discarded when using host network mode \u001b[33m\u001b[1m\u001b[0m     \u001b[34m0.0s \u001b[0m\n",
-      "\u001b[?25h\u001b[1A\u001b[1A\u001b[1A\u001b[1A\u001b[1A\u001b[1A\u001b[1A\u001b[1A\u001b[0G\u001b[?25l[+] Running 4/7\n",
-      " \u001b[33m⠙\u001b[0m Volume \"cloudwalk_postgres_data\"                                   Created\u001b[34m0.2s \u001b[0m\n",
-      " \u001b[32m✔\u001b[0m Container cloudwalk-db-1                                           \u001b[32mStarted\u001b[0m\u001b[34m0.2s \u001b[0m\n",
-      " \u001b[33m\u001b[1m!\u001b[0m db Published ports are discarded when using host network mode      \u001b[33m\u001b[1m\u001b[0m     \u001b[34m0.0s \u001b[0m\n",
-      " \u001b[33m⠙\u001b[0m Container cloudwalk-app-1                                          Starting\u001b[34m0.2s \u001b[0m\n",
-      " \u001b[33m⠙\u001b[0m Container pgadmin4_container                                       Starting\u001b[34m0.2s \u001b[0m\n",
-      " \u001b[33m\u001b[1m!\u001b[0m app Published ports are discarded when using host network mode     \u001b[33m\u001b[1m\u001b[0m     \u001b[34m0.0s \u001b[0m\n",
-      " \u001b[33m\u001b[1m!\u001b[0m pgadmin Published ports are discarded when using host network mode \u001b[33m\u001b[1m\u001b[0m     \u001b[34m0.0s \u001b[0m\n",
-      "\u001b[?25h\u001b[1A\u001b[1A\u001b[1A\u001b[1A\u001b[1A\u001b[1A\u001b[1A\u001b[1A\u001b[0G\u001b[?25l[+] Running 6/7\n",
-      " \u001b[33m⠹\u001b[0m Volume \"cloudwalk_postgres_data\"                                   Created\u001b[34m0.3s \u001b[0m\n",
-      " \u001b[32m✔\u001b[0m Container cloudwalk-db-1                                           \u001b[32mStarted\u001b[0m\u001b[34m0.2s \u001b[0m\n",
-      " \u001b[33m\u001b[1m!\u001b[0m db Published ports are discarded when using host network mode      \u001b[33m\u001b[1m\u001b[0m     \u001b[34m0.0s \u001b[0m\n",
-      " \u001b[32m✔\u001b[0m Container cloudwalk-app-1                                          \u001b[32mStarted\u001b[0m\u001b[34m0.3s \u001b[0m\n",
-      " \u001b[32m✔\u001b[0m Container pgadmin4_container                                       \u001b[32mStarted\u001b[0m\u001b[34m0.2s \u001b[0m\n",
-      " \u001b[33m\u001b[1m!\u001b[0m app Published ports are discarded when using host network mode     \u001b[33m\u001b[1m\u001b[0m     \u001b[34m0.0s \u001b[0m\n",
-      " \u001b[33m\u001b[1m!\u001b[0m pgadmin Published ports are discarded when using host network mode \u001b[33m\u001b[1m\u001b[0m     \u001b[34m0.0s \u001b[0m\n",
+      " \u001b[32m✔\u001b[0m Container cloudwalk-db-1      \u001b[32mRunning\u001b[0m                                   \u001b[34m0.0s \u001b[0m\n",
+      " \u001b[32m✔\u001b[0m Container cloudwalk-app-1     \u001b[32mRunning\u001b[0m                                   \u001b[34m0.0s \u001b[0m\n",
+      " \u001b[32m✔\u001b[0m Container pgadmin4_container  \u001b[32mRunning\u001b[0m                                   \u001b[34m0.0s \u001b[0m\n",
       "\u001b[?25h"
      ]
     }
