--- a/answers.ipynb
+++ b/answers.ipynb
@@ -27,13 +27,11 @@
   {
    "cell_type": "markdown",
    "id": "28b0bf4a-d820-4355-b263-1a22aa402f80",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Alembic\n",
     "\n",
-    "Alembic é uma ferramenta de migração de banco de dados para o SQLAlchemy, um toolkit de mapeamento relacional de objetos (ORM) em Python. Ele simplifica o processo de gerenciamento de mudanças de esquema em bancos de dados relacionais.\n"
+    "Alembic is a lightweight database migration tool for SQLAlchemy, a Python SQL toolkit and Object-Relational Mapper (ORM). It provides a convenient way to manage changes to your database schema over time."
    ]
   },
   {
@@ -41,35 +39,33 @@
    "id": "2142189c-451d-4fe2-8113-a1ba2c17ed74",
    "metadata": {},
    "source": [
-    "##### Principais recursos:\n",
+    "##### Key Features:\n",
     "\n",
-    "- **Controle de versão do esquema:** Alembic permite controlar as mudanças de esquema em bancos de dados através de revisões versionadas. Cada revisão representa uma alteração no esquema do banco de dados.\n",
+    "- **Schema Version Control:** Alembic enables tracking schema changes in databases through versioned revisions. Each revision represents a change in the database schema.\n",
     "\n",
-    "- **Autogeração de migrações:** Alembic pode gerar automaticamente scripts de migração com base nas diferenças entre modelos SQLAlchemy e o estado atual do banco de dados.\n",
+    "- **Automatic Migration Generation:** Alembic can automatically generate migration scripts based on the differences between SQLAlchemy models and the current state of the database.\n",
     "\n",
-    "- **Migrações personalizadas:** Os desenvolvedores podem criar migrações personalizadas usando Python, proporcionando flexibilidade para lidar com casos complexos de migração.\n",
+    "- **Custom Migrations:** Developers can create custom migrations using Python, providing flexibility to handle complex migration cases.\n",
     "\n",
-    "- **Suporte a múltiplos bancos de dados:** Alembic é compatível com uma variedade de sistemas de gerenciamento de banco de dados (SGBDs) suportados pelo SQLAlchemy, como PostgreSQL, MySQL, SQLite, entre outros.\n",
+    "- **Multiple Database Support:** Alembic is compatible with a variety of database management systems (DBMS) supported by SQLAlchemy, such as PostgreSQL, MySQL, SQLite, among others.\n",
     "\n",
-    "##### Uso básico:\n",
+    "##### Basic Usage:\n",
     "\n",
-    "1. **Configuração inicial:** Inicialize o ambiente do Alembic e configure o arquivo `alembic.ini` com as informações de conexão do banco de dados.\n",
+    "1. **Initial Setup:** Initialize the Alembic environment and configure the `alembic.ini` file with the database connection information.\n",
     "\n",
-    "2. **Criação de revisões:** Use o comando `alembic revision -m \"mensagem\"` para criar uma nova revisão. Isso criará um novo arquivo Python na pasta de revisões.\n",
+    "2. **Creation of Revisions:** Use the `alembic revision -m \"message\"` command to create a new revision. This will create a new Python file in the revisions folder.\n",
     "\n",
-    "3. **Atualização do banco de dados:** Aplique as revisões pendentes ao banco de dados utilizando o comando `alembic upgrade head`.\n",
+    "3. **Database Update:** Apply pending revisions to the database using the `alembic upgrade head` command.\n",
     "\n",
-    "4. **Desfazer alterações:** Se necessário, é possível reverter as alterações aplicadas usando o comando `alembic downgrade -1`, onde `-1` representa o número de revisões a serem revertidas."
+    "4. **Undo Changes:** If needed, it's possible to revert applied changes using the `alembic downgrade -1` command, where `-1` represents the number of revisions to be reverted.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "04470f14-5a3d-45bb-b924-fa31d6b336f0",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
-    "#### Arquivos de migracao utilizados"
+    "#### Migration File used"
    ]
   },
   {
