--- a/answers.ipynb
+++ b/answers.ipynb
@@ -2640,12 +2640,55 @@
   {
    "cell_type": "markdown",
    "id": "2d6a6384-4aab-480f-b0eb-3007af119fcb",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Question 2\n",
     "```Propose processes that should run daily, weekly, or monthly to maintain a healthy operation.```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c03921ff-4e16-4709-a764-1d431495969b",
+   "metadata": {},
+   "source": [
+    "### Daily Processes:\n",
+    "1. **Data Backup**: \n",
+    "   - Perform daily backups of the database to ensure data integrity and disaster recovery readiness.\n",
+    "\n",
+    "2. **Data Integrity Checks**: \n",
+    "   - Run daily data integrity checks to identify any inconsistencies or errors in the database.\n",
+    "   \n",
+    "3. **Transaction Monitoring**: \n",
+    "   - Send automated notifications to customers with upcoming payment deadlines or account updates to improve communication and customer experience.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0f5598d-48ca-44a9-94c8-c9d6a153ba63",
+   "metadata": {},
+   "source": [
+    "### Weekly Processes:\n",
+    "1. **Financial Reporting**: \n",
+    "   - Generate weekly financial reports to track key metrics, analyze trends, and support decision-making processes.\n",
+    "\n",
+    "2. **Performance Monitoring**: \n",
+    "   - Monitor system performance and resource utilization on a weekly basis to identify any bottlenecks or areas for improvement.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdfe7695-3838-43bf-ab39-e5a84a24b40b",
+   "metadata": {},
+   "source": [
+    "### Monthly Processes:\n",
+    "1. **Data Archiving**: \n",
+    "   - Archive inactive or historical data monthly to optimize database performance and storage utilization.\n",
+    "\n",
+    "2. **Audit Preparation**: \n",
+    "    - Prepare for audits by conducting monthly audits of financial transactions, data access logs, and security controls.\n",
+    "\n",
+    "3. **Customer Feedback Analysis**: \n",
+    "    - Analyze monthly customer feedback and satisfaction surveys to identify areas for improvement and enhance customer service.\n"
    ]
   },
   {
